<resources>
    <string name="app_name">PocketSmite</string>
    <string name="Conte">BUENO CONTRA</string>
    <string name="EsContereado">MALO CONTRA</string>
    <string name="BuildsPopulares">Builds Populares</string>
    <string name="arena">ARENA</string>
    <string name="combo">Combo</string>
    <string name="starterItem">Starter items</string>
    <string name="coreItem">Core items</string>
    <string name="attackItem">Attack items</string>
    <string name="defenseItem">Defense items</string>
    <string name="conquista">CONQUISTA</string>
    <string name="exampleGodName">Nombre del dios</string>
    <string name="exampleCategory">Categoría</string>
    <string name="examplePantheon">Panteon</string>
    <string name="justa">JUSTA</string>
    <string name="clash">CLASH</string>
    <string name="buscardios">Buscar un dios</string>
    <string name="recargar">Regresar al inicio</string>
    <string name="BuscarJugador">Buscar jugador</string>
    <string name="Pc">PC Oficial Smite</string>
    <string name="PS4">PS4 Oficial</string>
    <string name="Xbox">XBOX Oficial</string>
    <string name="guru">Cualquier plataforma SmiteGuru</string>
    <string name="regresar">Regresar</string>
    <string name="mago">Mago</string>
    <string name="sup">Support</string>
    <string name="tanque">Tanque</string>
    <string name="guerrero">Guerrero</string>
    <string name="ingrsanombre">Ingresa un nombre antes de buscar</string>
    <string name="fisicos">FISICOS</string>
    <string name="magicos">MAGICOS</string>
    <string name="general">GENERAL</string>
    <string name="poderfisico">Poder Fisico</string>
    <string name="podermagico">Poder Magico</string>
    <string name="velocidadedeataque">Velocidad de Ataque</string>
    <string name="vida">Vida</string>
    <string name="coldown">Reduccion de Cooldown</string>
    <string name="velocidadmovimiento">Velocidad de Movimiento</string>
    <string name="penetration">¨Penetracion</string>
    <string name="defensamagica">Defensa Magica</string>
    <string name="defensafisica">Defensa Fisica</string>
    <string name="robodevida">Robo de Vida</string>
    <string name="contromasas">Reduccion Control de Masas</string>
    <string name="criticos">Probavilidad de Criticos</string>
    <string name="pasiva">Pasiva</string>
    <string name="costo">\u0020Costo:</string>
    <string name="todoslositems">Todos Los Items</string>
    <string name="items">Items</string>
    <string name="rolar">Rolar</string>
    <string name="buildCreator">Crear build</string>
    <string name="searchByName">Buscar por nombre…</string>
    <string name="ceroStadistics">0</string>
    <string name="credits">Creditos</string>
    <string name="options">Opciones</string>
    <string name="buildInsideCard">Build\u0020</string>
    <string name="panteonGriego">Griego</string>
    <string name="panteonHindu">Hindú</string>
    <string name="panteonMaya">Maya</string>
    <string name="panteonJapones">Japones</string>
    <string name="panteonEgipcio">Egipcio</string>
    <string name="panteonChino">Chino</string>
    <string name="panteonCelta">Celta</string>
    <string name="panteonRomano">Romano</string>
    <string name="panteonVudu">Vudú</string>
    <string name="panteonEslavo">Eslavo</string>
    <string name="panteonNordico">Nordico</string>
    <string name="panteonPolinesio">Polinesio</string>
    <string name="panteonArturiano">Arturiano</string>
    <string name="panteonYoruba">Yoruba</string>
    <string name="categoriaGuerrero">Guerrero</string>
    <string name="categoriaMago">Mago</string>
    <string name="categoriaADC">ADC</string>
    <string name="categoriaMagoSoporte">Mago-soporte</string>
    <string name="categoriaTanque">Tanque</string>
    <string name="categoriaAsesino">Asesino</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="ataqueFisico">\nAtaque fisico:\u0020</string>
    <string name="ataqueMagico">\nAtaque magico:\u0020</string>
    <string name="mana">\nMana:\u0020</string>
    <string name="velAtaque">\nVel. ataque:\u0020</string>
    <string name="salud">\nSalud:\u0020</string>
    <string name="enfriamiento">\nEnfriamiento:\u0020</string>
    <string name="velMovimiento">\nVel. movimiento:\u0020</string>
    <string name="mps">\nMPS:\u0020</string>
    <string name="penetracion">\nPenetracion:\u0020</string>
    <string name="protMagica">\nProt. magica:\u0020</string>
    <string name="protFisica">\nProt. fisica:\u0020</string>
    <string name="roboVida">\nRobo de vida:\u0020</string>
    <string name="probabilidadCritico">\nChance de critico:\u0020</string>
    <string name="reduccionDeControlDeMasas">\nReduccion de control de masas:\u0020</string>
    <string name="hps">\nHPS:\u0020</string>
    <string name="more">\u0020mas…</string>
</resources>
