<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_heart"
        android:orderInCategory="102"
        android:title="favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/items"
        android:title="@string/items"
        app:showAsAction="never" />

    <item
        android:id="@+id/searchPlayers"
        android:title="@string/BuscarJugador"
        app:showAsAction="never" />

    <item
        android:id="@+id/options"
        android:title="@string/options"
        app:showAsAction="never" />

    <item
        android:id="@+id/credits"
        android:title="@string/credits"
        app:showAsAction="never" />

</menu>