<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light_transparent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/nombre"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_lovet1" />


    <ImageView
        android:id="@+id/godImage"
        android:layout_width="145dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/special"
        android:cropToPadding="false"
        android:maxHeight="120dp"
        android:maxWidth="120dp"
        android:src="@color/Azul" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/godImage"
        android:text="@string/exampleGodName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/nombre"
        android:layout_below="@id/nombre"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/godImage"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/godCategoryImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@color/colorAccent" />

        <TextView
            android:id="@+id/godCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:text="@string/exampleCategory"
            android:textSize="18dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/nombre"
        android:layout_below="@id/linearCategory"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/godImage"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/godGroupImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group" />

        <TextView
            android:id="@+id/godGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:text="@string/examplePantheon"
            android:textSize="18dp" />

    </LinearLayout>


</RelativeLayout>