<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".BuildMaker">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/BuscarJugador"
        app:srcCompat="@mipmap/onichan" />

    <ScrollView
        android:id="@+id/scrollItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/godBuildTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text=""
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toEndOf="@+id/backBuildButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/backBuildButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="RegresoMenu"
                android:text="@string/regresar"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/godBuildTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:onClick="recargarlista2"
                android:text="@string/items"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/godBuildTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/godBuildImage"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/godBuildTitle"
                app:srcCompat="@android:color/holo_blue_dark" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:columnCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/godBuildImage"
                app:rowCount="2">

                <ImageButton
                    android:id="@+id/itemBuild1"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_if_plus" />

                <ImageButton
                    android:id="@+id/itemBuild2"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_if_plus" />

                <ImageButton
                    android:id="@+id/itemBuild3"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_if_plus" />

                <ImageButton
                    android:id="@+id/itemBuild4"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_if_plus" />

                <ImageButton
                    android:id="@+id/itemBuild5"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_if_plus" />

                <ImageButton
                    android:id="@+id/itemBuild6"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_if_plus" />

            </android.support.v7.widget.GridLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="56dp"
                android:background="@color/Negro"
                android:text="@string/costo"
                android:textColor="@color/Blanco"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintEnd_toStartOf="@+id/godBuildImage"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toStartOf="@+id/backBuildButton"
                app:layout_constraintTop_toBottomOf="@+id/godBuildTitle" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/Negro"
                android:text="@string/ceroStadistics"
                android:textColor="@color/amarillo"
                android:textColorLink="@color/Negro"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/buildStadistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ceroStadistics"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/gridLayout"
                app:layout_constraintStart_toStartOf="@+id/gridLayout"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollItems"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5146175048698339/5952485553" />

</RelativeLayout>